# backend/items-api/pkg/transport/http/handlers.go
@@ -15,6 +15,7 @@ import (
 
 type ItemsService interface {
 	GetItem(ctx context.Context, id int64) (items.Item, apierrors.APIError)
+	ListItems(ctx context.Context, limit int, offset int) (items.ItemList, apierrors.APIError)
 	SaveItem(ctx context.Context, item items.Item) (items.Item, apierrors.APIError)
 	UpdateItem(ctx context.Context, item items.Item) (items.Item, apierrors.APIError)
 	DeleteItem(ctx context.Context, id int64) apierrors.APIError
@@ -68,6 +69,45 @@ func GetItemHandler(itemsService ItemsService, logger *logrus.Logger) gin.Handle
 			Item: item,
 		}
 		httpResponse := GetItemResponseToHTTP(response)
+		ctx.JSON(http.StatusOK, httpResponse)
+	}
+}
+
+// ListItemsHandler sets up the ListItems request handler
+// ListItems godoc
+//	@Summary		Return a list of items.
+//	@Description	Return the items information fetching information from the database.
+//	@Tags			Items
+//	@Param			limit	query	int	true	"List limit"
+//	@Param			offset	query	int	true	"List offset"
+//	@Produce		json
+//	@Success		200	{object}	ListItemsResponseHTTP
+//	@Failure		400	{object}	APIErrorHTTP
+//	@Failure		500	{object}	APIErrorHTTP
+//	@Router			/items [get]
+func ListItemsHandler(itemsService ItemsService, logger *logrus.Logger) gin.HandlerFunc {
+	return func(ctx *gin.Context) {
+		request, err := HTTPToListItemsRequest(ctx)
+		if err != nil {
+			apiErr := apierrors.NewBadRequestError(err.Error())
+			logger.Errorf("Error generating ListItemsRequest: %s", apiErr.Error())
+			httpResponse := APIErrorToHTTP(apiErr)
+			ctx.JSON(apiErr.Status(), httpResponse)
+			return
+		}
+		requestCtx := ctx.Request.Context()
+		list, apiErr := itemsService.ListItems(requestCtx, request.Limit, request.Offset)
+		if apiErr != nil {
+			logger.Errorf("Error listing items: %s", apiErr.Error())
+			httpResponse := APIErrorToHTTP(apiErr)
+			ctx.JSON(apiErr.Status(), httpResponse)
+			return
+		}
+		response := items.ListItemsResponse{
+			Paging: list.Paging,
+			Items:  list.Items,
+		}
+		httpResponse := ListItemsResponseToHTTP(response)
 		ctx.JSON(http.StatusOK, httpResponse)
 	}
 }
